# python-calamine

./: Cargo.toml
tests/: test_base.py
tests/data/: whitespace_strings.xlsx
